--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,8 @@
-/* *{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Encode Sans Expanded', sans-serif;
-}
- */
- .not-found{
+.not-found {
   height: 100vh;
-  background-color: #d6d6d6d6;
+  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
- }
+}
